# odin

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  WEBHOOK-TEST.md  clippy.toml  test_dir_error.sh
.github/workflows/: ci.yml  release.yml
crates/odin-cli/: Cargo.toml
crates/odin-cli/src/: catalog.rs  main.rs  scaffold.rs
crates/odin-cli/src/cmd/: approval.rs  cancel.rs  inspect.rs  mod.rs  prune.rs  recipe.rs  run.rs  status.rs  validate.rs
crates/odin-cli/tests/: inspect_cmd.rs  json_output.rs  prune_cmd.rs  recipe_new_cmd.rs  run_cmd.rs  status_cmd.rs
crates/odin-core/: Cargo.toml
crates/odin-core/examples/: codex_smoke.rs  cross_model_review.rs  cross_model_review.yaml  custom_plugin.rs
crates/odin-core/src/: api.rs  engine.rs  error.rs  ids.rs  lib.rs  mock.rs  registry.rs  telemetry.rs  usage.rs  view.rs
crates/odin-core/src/action/: git.rs  github.rs  mod.rs  shell.rs
crates/odin-core/src/context/: mod.rs  refs.rs  render.rs  shape.rs
crates/odin-core/src/engine/: local.rs  mod.rs
crates/odin-core/src/engine/local/: api.rs  ctx.rs  dispatch.rs  gitio.rs  loop_driver.rs  provision.rs
crates/odin-core/src/ir/: duration.rs  mod.rs  params.rs  step.rs  trigger.rs  workflow.rs  workspace.rs
crates/odin-core/src/provider/: claude.rs  codex.rs  copilot.rs  mod.rs  process.rs
crates/odin-core/src/storage/: mod.rs  sqlite.rs
crates/odin-core/src/traits/: action.rs  mod.rs  provider.rs  store.rs  trigger.rs  workspace.rs
crates/odin-core/src/validate/: diagnostic.rs  graph.rs  mod.rs  rules.rs
crates/odin-core/src/workspace/: git.rs  mod.rs  slot.rs  worktree.rs
crates/odin-core/tests/: examples.rs  schema.rs  validation_rules.rs
crates/odin-daemon/: Cargo.toml
crates/odin-daemon/src/: catalog.rs  daemon.rs  dashboard.rs  lib.rs  main.rs  metrics.rs  trigger.rs  webhook.rs
crates/odin-daemon/tests/: approval_http_integration.rs  catalog_security.rs  daemon_loop.rs  metrics_hook.rs  webhook_generic.rs  webhook_integration.rs
docs/: architecture.md  cli.md  daemon.md  environment.md  getting-started.md  glossary.md  integration-guide.md  observability.md  openapi.yaml  recipe-templating.md  webhook-walkthrough.md  workflow-reference.md  workflow.schema.json
docs/design/: foundation-blueprint.md
examples/: adversarial-review.yaml  branching-review.yaml  deep-review-codex.yaml  deep-review.yaml  deploy-on-webhook.yaml  fix-flaky-test.yaml  gated-deploy.yaml  issue-to-pr.yaml  iterate.yaml  local-review.yaml  loop-with-case.yaml  multi-agent-eval.yaml  nightly-maintenance.yaml  quickstart.yaml  self-correct.yaml  ship-release.yaml  templated-pr-review.yaml  triage.yaml
examples/prompts/: implement.j2
