[package]
name = "odin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line runner for the Odin workflow engine."

[lints]
workspace = true

[[bin]]
name = "odin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
odin-core = { workspace = true }
serde_json = "1.0.150"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.27.0"
# clap and friends are added in the CLI milestone (M7).
