[package]
name = "odin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line runner for the Odin workflow engine."

[lints]
workspace = true

[[bin]]
name = "odin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.42", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
odin-core = { workspace = true, features = ["telemetry"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.27.0"
