[package]
name = "odin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line runner for the Odin workflow engine."

[lints]
workspace = true

[[bin]]
name = "odin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
odin-core = { workspace = true, features = ["telemetry", "mock"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
# A small blocking HTTP client for `odin status --url` (read a remote daemon's /api/runs).
ureq = "2.12"

[dev-dependencies]
tempfile = "3.27.0"
