[package]
name = "odin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Always-on — the IR parse/validate path depends only on these.
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
indexmap = { version = "2.14.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
uuid = { version = "1.23.2", features = ["v4", "serde"] }

# Optional — gated behind features so a parse-only embedder pays nothing for them.
minijinja = { version = "2.20.0", optional = true }
async-trait = { version = "0.1.89", optional = true }
anyhow = { version = "1.0.102", optional = true }
tokio = { version = "1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "process", "time", "sync", "macros", "io-util", "fs"], optional = true }
tokio-util = { version = "0.7.18", features = ["rt"], optional = true }
futures-core = { version = "0.3.32", optional = true }
# Pinned below 0.40: rusqlite 0.40 pulls libsqlite3-sys 0.38, whose build script uses
# the still-unstable `cfg_select!` and won't compile on stable.
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[dev-dependencies]
serde_yaml_ng = "0.10.0"
tempfile = "3.27.0"

[features]
default = ["full"]
# Parse + validate the IR. No async runtime, no templating engine.
ir = []
# Render prompts/conditionals and statically check template references (ODIN017/018).
templating = ["dep:minijinja"]
# The five integration traits, the registry, and the engine façade.
runtime = [
    "dep:async-trait",
    "dep:tokio",
    "dep:tokio-util",
    "dep:anyhow",
    "dep:futures-core",
    "dep:rusqlite",
]
# Ships the Noop/Mock trait impls for downstream tests.
mock = ["runtime"]
# Everything.
full = ["ir", "templating", "runtime"]
