[package]
name = "odin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Always-on — the IR parse/validate path depends only on these.
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
indexmap = { version = "2.14.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
uuid = { version = "1.23.2", features = ["v4", "serde"] }

# Optional — gated behind features so a parse-only embedder pays nothing for them.
minijinja = { version = "2.20.0", optional = true }
async-trait = { version = "0.1.89", optional = true }
anyhow = { version = "1.0.102", optional = true }
# `io-std` is for `tokio::io::stderr()` in `StreamMux::to_stderr()` (the `--stream` live view).
tokio = { version = "1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "process", "time", "sync", "macros", "io-util", "io-std", "fs"], optional = true }
tokio-util = { version = "0.7.18", features = ["rt"], optional = true }
futures-core = { version = "0.3.32", optional = true }
futures-util = { version = "0.3.32", default-features = false, optional = true }
# Pinned below 0.40: rusqlite 0.40 pulls libsqlite3-sys 0.38, whose build script uses
# the still-unstable `cfg_select!` and won't compile on stable.
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
# Structured logging/tracing. The engine *emits* spans/events via this facade; it pulls no
# tokio, so the parse-only `ir` build stays runtime-free. A subscriber is installed only by the
# binaries (see the `telemetry` feature), never by the library itself.
tracing = { version = "0.1.41", optional = true }

# Telemetry — a `tracing` subscriber + optional OTLP exporter, for the BINARIES to install via
# `odin_core::telemetry`. Opt-in (off in `full`) so the default / `ir` / MSRV builds pay nothing.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"], optional = true }
opentelemetry = { version = "0.32.0", optional = true }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["grpc-tonic", "trace"], optional = true }
tracing-opentelemetry = { version = "0.33.0", optional = true }

# Unix-only, for the process-group kill on timeout/cancel (reaping a step's agent tool
# subprocesses / `sh -c` grandchildren). A safe `killpg` wrapper — the crate forbids `unsafe`, so it
# can't call `libc::killpg` directly, and shelling out to `kill -<pgid>` proved unreliable across
# `kill` implementations. Compiled out on non-Unix; `process.rs` (its only user) is runtime-gated.
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", default-features = false, features = ["process"] }

[dev-dependencies]
serde_yaml_ng = "0.10.0"
tempfile = "3.27.0"

[features]
default = ["full"]
# Parse + validate the IR. No async runtime, no templating engine.
ir = []
# Render prompts/conditionals and statically check template references (ODIN017/018).
templating = ["dep:minijinja"]
# The five integration traits, the registry, and the engine façade.
runtime = [
    "dep:async-trait",
    "dep:tokio",
    "dep:tokio-util",
    "dep:anyhow",
    "dep:futures-core",
    "dep:futures-util",
    "dep:rusqlite",
    "dep:tracing",
]
# Ships the Noop/Mock trait impls for downstream tests.
mock = ["runtime"]
# Everything (the library surface — telemetry/otlp are binary concerns, intentionally excluded).
full = ["ir", "templating", "runtime"]
# A binary-side convenience: `odin_core::telemetry::init` installs a `tracing` subscriber
# (EnvFilter + text/JSON fmt). The `otlp` feature adds an OpenTelemetry OTLP span exporter.
telemetry = ["runtime", "dep:tracing-subscriber"]
# Adds an OpenTelemetry OTLP span exporter to `telemetry` (heavy: pulls tonic/grpc + the OTel
# SDK). Off by default and excluded from `full`, so default / `ir` / MSRV builds stay lean.
otlp = [
    "telemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

# The cross-model review example drives the engine with model-pinned providers, so it needs
# the runtime + templating stack. Without this, a reduced-feature build (e.g. `--features ir`)
# would try to compile it and fail.
[[example]]
name = "cross_model_review"
required-features = ["runtime", "templating"]

# Codex-only smoke (no Claude calls) for cheap iteration on the codex integration.
[[example]]
name = "codex_smoke"
required-features = ["runtime", "templating"]

# A custom Provider + Action implemented against the public API and run end-to-end.
[[example]]
name = "custom_plugin"
required-features = ["runtime", "templating"]
