[package]
name = "odin-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Long-running daemon that drives Odin workflows from event triggers."

[lints]
workspace = true

[lib]
name = "odin_daemon"
path = "src/lib.rs"

[[bin]]
name = "odind"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
cron = "0.12.1"
directories = "6.0.0"
hex = "0.4.3"
hmac = "0.12.1"
indexmap = "2.12.0"
odin-core = { workspace = true, features = ["telemetry"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tokio = { version = "1.52.3", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "net",
    "sync",
    "io-util",
] }
tokio-util = { version = "0.7.18", default-features = false }
tracing = "0.1.41"

[features]
# Compile the OpenTelemetry OTLP span exporter into `odind` (heavy; opt-in). Activate it at
# runtime with `--otlp-endpoint <url>`; without this feature that flag is ignored with a warning.
otlp = ["odin-core/otlp"]

[dev-dependencies]
tempfile = "3.27.0"
